--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -11,7 +11,8 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".DetailShopActivity"></activity>
+        <activity android:name=".FullVideoTutorialActivity"></activity>
+        <activity android:name=".DetailShopActivity" />
         <activity android:name=".DetailArticleActivity" />
         <activity android:name=".MainActivity" />
         <activity android:name=".LoginActivity">
